--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,11 +4,10 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="16"
-        android:targetSdkVersion="18" />
+    <uses-sdk android:minSdkVersion="15" android:targetSdkVersion="15"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
