--- a/.cproject
+++ b/.cproject
@@ -16,12 +16,14 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactName="${ProjName}" buildProperties="" id="com.android.toolchain.gcc.1568814296" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
+				<configuration artifactName="${ProjName}" buildProperties="" description="" id="com.android.toolchain.gcc.1568814296" name="Default" parent="org.eclipse.cdt.build.core.emptycfg">
 					<folderInfo id="com.android.toolchain.gcc.1568814296.919941897" name="/" resourcePath="">
 						<toolChain id="com.android.toolchain.gcc.1248258900" name="com.android.toolchain.gcc" superClass="com.android.toolchain.gcc">
 							<targetPlatform binaryParser="org.eclipse.cdt.core.ELF" id="com.android.targetPlatform.1728328304" isAbstract="false" superClass="com.android.targetPlatform"/>
-							<builder id="com.android.builder.962444130" managedBuildOn="false" name="Android Builder.Default" superClass="com.android.builder"/>
-							<tool id="com.android.gcc.compiler.952040507" name="Android GCC Compiler" superClass="com.android.gcc.compiler"/>
+							<builder id="com.android.builder.962444130" keepEnvironmentInBuildfile="false" managedBuildOn="false" name="Android Builder" superClass="com.android.builder"/>
+							<tool id="com.android.gcc.compiler.952040507" name="Android GCC Compiler" superClass="com.android.gcc.compiler">
+								<inputType id="com.android.gcc.inputType.1642748289" superClass="com.android.gcc.inputType"/>
+							</tool>
 						</toolChain>
 					</folderInfo>
 				</configuration>
@@ -35,4 +37,5 @@
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 	</storageModule>
+	<storageModule moduleId="refreshScope"/>
 </cproject>
